---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 

---------------------------
  Jackdmp changes log
---------------------------

2007-11-05 Stephane Letz  <letz@grame.fr>

	* Use of JackWinSemaphore instead of JackWinEvent for inter-process synchronization.

2007-11-04 Stephane Letz  <letz@grame.fr>

	* Add an implementation for obsolete jack_internal_client_new and .jack_internal_client_close. Add missing jack_port_type_size.

2007-11-02 Stephane Letz  <letz@grame.fr>

	* Correct ALSA driver Attach method: internal driver may have changed the buffer_size and sample_rate values.
	* Add JackWinSemaphore class.

2007-10-01 Stephane Letz  <letz@grame.fr>

	* Server and user directory related code moved in a JackTools file.
	* Client name rewritting to remove path characters (used in fifo naming).

2007-10-30 Stephane Letz  <letz@grame.fr>

	* Fix a bug in freewheel management in async mode: drivers now receive the kStartFreewheelCallback and kStopFreewheelCallback notifications.

2007-10-26 Stephane Letz  <letz@grame.fr>

	* Add midiseq and midisine examples. 
	* Cleanup old zombification code. 
	* Linux Makefile now install jack headers.
	* Use of JACK_CLIENT_DEBUG environment variable to activate debug client mode.
	* Definition of JACK_LOCATION variable using -D in the Makefile.
	* Restore jack 0.103.0 MIDI API version.

2007-10-25 Stephane Letz  <letz@grame.fr>

	* Merge of Dmitry Baikov MIDI branch. 
	* Correct JackGraphManager::GetPortsAux to use port type.
	* Remove JackEngineTiming class: code moved in JackEngineControl.

2007-10-24 Stephane Letz  <letz@grame.fr>

	* Implementation of server_name setting (-n).

2007-10-23 Stephane Letz  <letz@grame.fr>

	* Correct jack_acquire_real_time_scheduling on OSX.

2007-10-18 Stephane Letz  <letz@grame.fr>
